--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
   padding: 0.75rem 2rem;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  max-width: 95vw;
+  max-width: 90vw;
   width: fit-content;
   margin: 0.5rem;
   text-align: center;
@@ -121,17 +121,15 @@
   background-color: #e31837;
   color: #fff;
   border: 2px solid #ffd700;
-  padding: 0.5rem 1.5rem;
-  border-radius: 0.5rem;
   transition: all 0.3s ease;
   width: 100%;
+  height: 1px;
   visibility: hidden;
 }
 
 .cny-button:hover {
   background-color: #ffd700;
   color: #e31837;
-  transform: translateY(-2px);
 }
 
 /* Image Styles */
