--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
   bottom: 0;
   width: 100%;
   z-index: 10;
+  background-color: white;
 }
 
 .lion-wrapper {
@@ -42,6 +43,7 @@
   width: fit-content;
   margin: 0.5rem;
   text-align: center;
+  padding-bottom: 0px;
 }
 
 .greeting-container {
